--- a/.ssh/config
+++ b/.ssh/config
@@ -1,16 +1,14 @@
 User dmezentsev
 
-#CanonicalizeHostname yes
-#CanonicalDomains local
-
 Compression yes
 
 ControlMaster auto
 ControlPersist 600
-ControlPath ~/.ssh/sockets/%r@%h:%p
+#ControlPath ~/.ssh/sockets/%r@%h:%p
+ControlPath /tmp/sshsocket_%r@%h:%p
 
 CheckHostIP no
 
 AddKeysToAgent yes
 
-PubkeyAcceptedKeyTypes +ssh-rsa
+#PubkeyAcceptedKeyTypes +ssh-rsa
